--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "bcrypt": "^6.0.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^6.10.1",
     "postcss": "^8.5.6",
     "prisma": "^6.11.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
