--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
+    "lucide-react": "^0.536.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
