--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
+    "@headlessui/react": "^2.2.7",
     "@prisma/client": "^6.11.1",
     "bcryptjs": "^3.0.2",
     "lucide-react": "^0.536.0",
