--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prisma": "^6.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^3.1.0",
     "sharp": "^0.34.3"
   },
   "devDependencies": {
