--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@headlessui/react": "^2.2.7",
     "@prisma/client": "^6.11.1",
+    "@tanstack/react-query": "^5.84.1",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.536.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
@@ -25,9 +29,11 @@
     "postcss": "^8.5.6",
     "prisma": "^6.11.1",
     "react": "^19.0.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.0.0",
     "recharts": "^3.1.0",
-    "sharp": "^0.34.3"
+    "sharp": "^0.34.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
