--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@headlessui/react": "^2.2.7",
     "@prisma/client": "^6.11.1",
     "@tanstack/react-query": "^5.84.1",
+    "@types/jspdf": "^1.3.3",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "jspdf": "^3.0.1",
